# 2d-game-dev

./: .gitignore  CMakeLists.txt
include/: DynamicRB.h  Entity.h  Level.h  StaticRB.h  World.h
src/: DynamicRB.cpp  Entity.cpp  Level.cpp  StaticRB.cpp  World.cpp  main.cpp
utils/: colorPrint.sh  runSetup  updateCMake.sh
